--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '4.0.2'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id "org.sonarqube" version "7.1.0.6387"
+
 }
 
 group = 'com.example'
@@ -26,4 +28,11 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "advprog-2026-B13-project_individual-preparation"
+    property "sonar.organization", "advprog-2026-b13-project"
+  }
 }
