--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -29,7 +29,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build / Compile
-        run: ./gradlew check
+        run: ./gradlew build
 
       - name: Upload build result
         uses: actions/upload-artifact@v4
